--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ html {
   font-size: 62.5%;
 }
 
+@media only screen and (max-width: 400px) {
+  html {
+    font-size: 70%;
+  }
+}
+
 .container {
   font-weight: 400;
   line-height: 1.7;
@@ -23,11 +29,56 @@ html {
   align-items: center;
   justify-content: center;
   background-image: linear-gradient(
-      to right bottom,
-      rgba(126, 213, 111, 0.8),
-      rgba(40, 180, 133, 0.8)
-    ),
-    url(./images/hero.jpg);
+    to right bottom,
+    rgba(126, 213, 111, 0.8),
+    rgba(40, 180, 133, 0.8)
+  );
+}
+
+.message {
+  width: 18.4rem;
+  height: 26.7rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-image: url(./images/message.png);
+}
+
+.gameOver {
+  width: 18.4rem;
+  height: 26.7rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  z-index: 10000;
+}
+
+.scoreCard {
+  border: 2px solid white;
+  margin-top: 3rem;
+  width: 80%;
+  height: 30%;
+  font-size: 2.5rem;
+  font-weight: 600;
+  color: white;
+  border-radius: 1rem;
+  text-align: center;
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(126, 213, 111, 0.8),
+    rgba(40, 180, 133, 0.8)
+  );
+}
+
+.restart {
+  font-size: 5rem;
+  color: rgba(126, 213, 111);
 }
 
 .game {
