--- a/style.css
+++ b/style.css
@@ -141,16 +141,36 @@ html {
 }
 
 .score {
-  color: white;
-  border: 2px solid white;
   text-align: center;
-  width: 45%;
-  font-size: 2rem;
-  padding: 0.5rem 0.7rem;
+  width: 2.4rem;
+  height: 3.6rem;
+  background-image: url(images/0.png);
   display: inline-block;
-  border-radius: 2rem;
+  background-size: contain;
+  background-repeat: no-repeat;
+  /* position: absolute;
+  top: 4rem;
+  left: 50%;
+  transform: translateX(-50%); */
+}
+
+.score2 {
+  text-align: center;
+  width: 2.4rem;
+  height: 3.6rem;
+  font-size: 2rem;
+  background-image: url(images/0.png);
+  display: inline-block;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.scoreImages {
   position: absolute;
   top: 4rem;
   left: 50%;
   transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
